# cbc-aaai-2025

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
assets/: requirements.txt
deep_cbc/: cbcnet_executor.py  pipnet_executor.py  pipnet_main.py
deep_cbc/configs/: model_config.py
deep_cbc/configs/cars_configs/: cars_convnext_aligned_config_base.yaml  cars_convnext_config_base.yaml  cars_rbfnet_config_base.yaml  cars_resnet_config_base.yaml  pipnet_convnext_config_base.yaml
deep_cbc/configs/cub_configs/: cub_convnext_aligned_config_base.yaml  cub_convnext_config_base.yaml  cub_rbfnet_config_base.yaml  cub_resnet_config_base.yaml  pipnet_convnext_config_base.yaml
deep_cbc/configs/pets_configs/: pets_convnext_aligned_config_base.yaml  pets_convnext_config_base.yaml  pets_rbfnet_config_base.yaml  pets_resnet_config_base.yaml  pipnet_convnext_config_base.yaml
deep_cbc/features/: convnext_features.py  resnet_features.py
deep_cbc/models/: cbc.py  cbcnet.py  lib.py  margin_loss.py  pipnet.py  test_cbcnet.py  test_pipnet.py  train_cbcnet.py  train_pipnet.py
deep_cbc/utils/: args.py  constants.py  data.py  eval_purity.py  logging.py  preprocess.py  visualize_data.py  visualize_predictions.py
executor_scripts/: cbcnet_cub_experiments.sh  cbcnet_resnet_experiments.sh  pipnet_experiments.sh  rbfnet_experiments.sh
